docs: Add conclusion and separate implementation chapter

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,31 @@
+%[http://www.planalto.gov.br/ccivil_03/LEIS/L9503.htm]
+%[Manual de direção defensiva DENATRAN]
+%[http://www.denatran.gov.br/index.php/estatistica/610-frota-2017].
+%[http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/]
+%[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf] 
+%[https://singep.org.br/6singep/resultado/406.pdf] [http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
+%[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf].
+%[http://meusite.mackenzie.br/professor_cucci/ManualSemaforos2014.pdf].
+%[Michael Barr. Programming Embedded Systems in C and C++. cap1].
+%[http://www.eletrica.ufpr.br/mehl/te200/aulas/embarcados.pdf].
+%[Osborne, Adam (1980). An Introduction to Microcomputers. Volume 1: Basic Concepts (2nd ed.). Berkeley, California: Osborne-McGraw Hill.].
+%[http://www.intel4004.com/The_MOS_Silicon_Gate_Technology_and_the_First_Microprocessors.pdf em http://www.intel4004.com/].
+% [http://iris.sel.eesc.usp.br/sel433a/Micros.pdf].
+%http://iris.sel.eesc.usp.br/sel433a/Micros.pdf].
+%[http://ww1.microchip.com/downloads/en/DeviceDoc/60001525A.pdf].
+%http://www.emc.ufg.br/~jwilson/teoria.html 
+%https://docente.ifsc.edu.br/rafael.grebogi/MaterialDidatico/Mecatronica/Microcontroladores/ebook%20-%20microcontrolador%208051-%20detalhado.pdf [Nicolosi, Denys E. C. Microcontrolador 8051 detalhado, 6a Ed. Editora Érica]
+%https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
+%[http://microchipdeveloper.com/8bit:dac]
+%[Gustavo Souto de Sá e Souza. Microcontroladores PIC. 2018. 87 slides. Disponivel em http://www.emc.ufg.br/~jwilson/pdf/4_Micro_Parte_4_(PIC)_Introducao.pdf]
+%http://www.emc.ufg.br/~jwilson/pdf/Notas_de_Aula_de_Micro.pdf
+%[https://docente.ifsc.edu.br/rafael.grebogi/MaterialDidatico/Mecatronica/Microcontroladores/ebook%20-%20microcontrolador%208051-%20detalhado.pdf].
+%[http://ww1.microchip.com/downloads/en/DeviceDoc/30325b.pdf]
+%[http://meusite.mackenzie.br/professor_cucci/ManualSemaforos2014.pdf]. 
+%[Rudolf F. Graf (1999). Modern dictionary of electronics. Newnes. ISBN 0-7506-9866-7.]
+% [M.D. Singh, K.B. Khanchandani, Power Electronics, Second Edition, Tata McGraw-Hill, New Delhi, 2007, pages 148-152]
+%http://www.cetsp.com.br/media/20650/nt%20163%20revisado.pdf
+
 @misc {normabr,
     author  = "Associação Brasileira de Normas Técnicas",
     title   = "{ABNT NBR ISO/CIE} 8995-1",
