--- a/intro.tex
+++ b/intro.tex
@@ -31,12 +31,12 @@ O foco deste trabalho é a sinalização semafórica das vias urbanas.
     \includegraphics{figuras/semaforo_ped.PNG}}
     \caption[Semáforos]{Exemplos de sinalização semafórica.}
     \end{center}
-    %\label{semaforos}
+    \label{semaforos}
 \end{figure}
 %http://www.cetsp.com.br/media/517462/nt252.pdf (semaforo veicular CET)(a)
 %http://www.cetsp.com.br/media/478292/nt241.pdf (foco pedestres)(b)
 
-A Figura \ref{veicular} apresenta exemplos de sinalização semafórica, utilizados no controle de fluxos veicular e de pedestres.
+A Figura 1.1 apresenta exemplos de sinalização semafórica, utilizados no controle de fluxos veicular (\ref{veicular}) e de pedestres (\ref{pedestre}).
 
 \section{Objetivo}
 
