--- a/main.tex
+++ b/main.tex
@@ -181,8 +181,10 @@ Não sou obrigado a vencer, mas tenho o dever de ser verdadeiro. Não sou obriga
 % incluí-los:
 \include{intro}
 \include{teoria}
-\include{materiais}
+%\include{materiais}
 \include{projeto}
+\include{integracao}
+\include{conclusao}
 
 %%
 %% Parte pós-textual
