docs: write acros. and integration

--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,3 +1,6 @@
 \chapter{Considerações finais}
 
 Os microcontroladores são versáteis e capazes de realizar as tarefas propostas neste trabalho, de monitorar e controlar o trânsito em regiões urbanas, de maneira automatizada e integrada, fazendo parte de soluções adotadas, com o intuito de tornar as experiências em locais urbanos seguras e ordenadas.
+
+Foram apresentados diferentes sistemas, cada um com uma finalidade específica, de modo a aumentar a confiabilidade no funcionamento individual. Foi desenvolvida, também, a integração entre todos os equipamentos, para atingir a sincronia entre os processos envolvidos.
+
