--- a/siglas.tex
+++ b/siglas.tex
@@ -1,15 +1,19 @@
 \chapter*{Lista de Siglas}
 \begin{acronym}[MQTT]
-    \acro{IEEE}{\textit{Institute of Electrical and Electronics Engineers}}
-    \acro{IoT}{\textit{Internet of Things}}
-    \acro{IP}{\textit{Internet Protocol}}
-    \acro{LDR}{\textit{Light Dependent Resistance}}
     \acro{LED}{\textit{Light Emitting Diode}}
-    \acro{MAC}{\textit{Media Access Control}}
-    \acro{MQTT}{\textit{Message Queue Telemetry Transport}}
-    \acro{PWM}{\textit{Pulse Width Modulation}}
-    \acro{QoS}{\textit{Quality of Service}}
-    \acro{SoC}{\textit{System on Chip}}
-    \acro{TCP}{\textit{Transmission Control Protocol}}
-    \acro{WiFi}{\textit{Wireless Fidelity}}
+    \acro{RAM}{\textit{Random-Access Memory}}
+    \acro{ROM}{\textit{Read-Only Memory}}
+    \acro{ULA}{Unidade Lógica e Aritmética}
+    \acro{UC}{Unidade de Controle}
+    \acro{MIPS}{\textit{Million Instructions Per Second}}
+    \acro{I/O}{\textit{Input/Output}}
+    \acro{EPROM}{\textit{Erasable Programmable Read-Only Memory}}
+    \acro{EEPROM}{\textit{Electrically Erasable Programmable Read-Only Memory}}
+    \acro{ADC}{\textit{Analog-to-Digital Converter}}
+    \acro{DAC}{\textit{Digital-to-Analog Converter}}
+    \acro{RX}{\textit{Receiver}}
+    \acro{TX}{\textit{Transmitter}}
+    \acro{USART}{\textit{Universal Synchronous and Asynchronous Receiver-Transmitter}}
+    \acro{TRIAC}{\textit{Triode for Alternating Current}}
+    \acro{CPU}{\textit{Central Processing Unit}}
 \end{acronym}
